05-wordpress/manifests/01-svc-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: mini-cloud
  labels:
    project: k8s-mini-cloud
    component: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
      name: http
