05-wordpress/manifests/03-ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: mini-cloud
  labels:
    project: k8s-mini-cloud
    component: wordpress
spec:
  ingressClassName: nginx
  rules:
    - host: labs.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
